Fixed layout bug

--- a/v0/public/style.css
+++ b/v0/public/style.css
@@ -1,91 +1,87 @@
-#add-button p{
+#add-button p {
   font-weight: 400;
 }
-#error{
+#error {
   font-size: 8vw;
   margin: 70px auto;
   text-align: center;
 }
 @media (min-width: 640px) {
-
   /* change to double column for bottom temps. */
 
-  main{
+  main {
     margin-left: calc(50% - 320px);
   }
 
-  article{
+  article {
     float: left;
   }
 
-  .sub-display{
+  .sub-display {
     max-width: 300px;
   }
 }
 
 @media (min-width: 768px) {
-
   /* Change to forecast wide view. */
-  main{
+  main {
     margin-left: calc(50% - 384px);
     max-width: 768px;
   }
 
-  .sub-display{
+  .sub-display {
     max-width: 364px;
     float: left;
   }
 
-  .sub-display h1{
+  .sub-display h1 {
     margin-top: 30px;
     font-size: 36pt;
     margin-left: 35px;
   }
 
-  .sub-display h1 span{
-  	top: -24px;
+  .sub-display h1 span {
+    top: -24px;
   }
 
-  .sub-display h2{
+  .sub-display h2 {
     font-weight: 400;
     margin-top: -42px;
     margin-bottom: 42px;
     margin-right: 40px;
-
   }
 
-  #add-button p{
+  #add-button p {
     margin-top: 44px;
     margin-bottom: 44px;
     margin-left: 38px;
   }
 
-  .timeOfDay{
-  	float: left;
-  	font-weight: 400;
-  	font-size: 12pt;
+  .timeOfDay {
+    float: left;
+    font-weight: 400;
+    font-size: 12pt;
   }
 
-
-  .local-forecast{
-    background-color: rgba(255,255,255,0.3);
+  .local-forecast {
+    background-color: rgba(255, 255, 255, 0.3);
     margin-top: 40px;
   }
 
-  .forecast-item{
+  .forecast-item {
     /*background-color: blue;*/
     font-weight: 400;
     float: left;
     width: 100px;
-    margin: 0;
+    margin: -210;
     height: 100px;
-    margin-left: 20px;
+    margin-left: 230px;
     margin-top: 10px;
     margin-bottom: 20px;
+    border: dashed 0px red;
   }
 
-
-  #date{
+  #date {
     /*background-color: red;*/
     float: left;
     font-weight: 400;
@@ -96,7 +92,7 @@
     text-align: left;
   }
 
-  #location{
+  #location {
     /*background-color: brown;*/
     float: right;
     text-align: right;
@@ -107,7 +103,7 @@
     margin-right: 25px;
   }
 
-  #main-temp{
+  #main-temp {
     float: left;
     margin-top: 50px;
     margin-left: -320px;
@@ -115,18 +111,18 @@
     /*background-color: purple;*/
   }
 
-  #main-temp span{
+  #main-temp span {
     top: -35px;
   }
 
-  .timeOfDay{
+  .timeOfDay {
     text-align: center;
     width: 100%;
     /*background-color: red;*/
     margin: 0;
   }
 
-  .forecast-item img{
+  .forecast-item img {
     /*background-color: purple;*/
     width: 80px;
     margin: 0;
@@ -136,14 +132,14 @@
     margin-bottom: 5px;
   }
 
-  .subTemp{
+  .subTemp {
     /*background-color: brown;*/
     text-align: center;
     width: 100%;
     margin: 0;
   }
 
-  .wind-section{
+  .wind-section {
     left: 50px;
     /*background-color: orange;*/
     width: calc(100% - 100px);
@@ -153,26 +149,25 @@
     border-top: 1px white solid;
   }
 
-  .wind-wrapper{
+  .wind-wrapper {
     border: none;
     /*background-color: blue;*/
     margin-left: 100px;
   }
 
-  #current-speed{
-  	float: left;
+  #current-speed {
+    float: left;
     margin-left: 50px;
     margin-top: 10px;
-
   }
 
-  .wind-section img{
+  .wind-section img {
     float: left;
     margin-left: -90px;
     margin-top: 14px;
   }
 
-  .wind-wrapper p{
+  .wind-wrapper p {
     float: left;
     /*background-color: brown;*/
     width: 40px;
@@ -180,32 +175,36 @@
     font-weight: 400;
   }
 
-  #popout{
+  #popout {
     width: 350px;
     height: 230px;
     margin-left: calc(50% - 175px);
   }
 
-  .add-btn, .cancel-btn{
+  .add-btn,
+  .cancel-btn {
     float: left;
     width: calc(50% - 45px);
   }
 
-  .cancel-btn{
+  .cancel-btn {
     margin-left: 10px;
   }
 
-  #first-wind, #second-wind, #third-wind, #fourth-wind{
+  #first-wind,
+  #second-wind,
+  #third-wind,
+  #fourth-wind {
     padding: 0;
   }
 
-  #bigSun{
+  #bigSun {
     left: calc(100% - 300px);
     top: -100px;
   }
 
-  .sub-delete{
-    background-color: rgba(247, 59, 59,0);
+  .sub-delete {
+    background-color: rgba(247, 59, 59, 0);
     border-radius: 80px;
     margin: 19px 0px;
     max-width: 430px;
@@ -216,14 +215,10 @@
     font-size: 16pt;
     cursor: pointer;
   }
-
 }
 
-
-
 @media (min-width: 900px) {
-
-  main{
+  main {
     margin-left: calc(50% - 450px);
     max-width: 900px;
   }
@@ -232,36 +227,36 @@
     max-width: 430px;
   }
 
-  .sub-display h2{
+  .sub-display h2 {
     font-size: 18pt;
     font-weight: 400;
   }
 
-  #add-button p{
+  #add-button p {
     font-size: 18pt;
   }
 
-  #date{
+  #date {
     width: 410px;
   }
 
-  #location{
+  #location {
     width: 410px;
   }
 
-  #main-temp{
+  #main-temp {
     margin-left: -380px;
     margin-right: 40px;
   }
 
-  .wind-wrapper{
+  .wind-wrapper {
     border: none;
     /*background-color: blue;*/
     margin-left: 138px;
   }
 
-  .sub-delete{
-    background-color: rgba(247, 59, 59,0);
+  .sub-delete {
+    background-color: rgba(247, 59, 59, 0);
     border-radius: 80px;
     margin: 15px 0px;
     max-width: 430px;
@@ -272,7 +267,4 @@
     font-size: 18pt;
     cursor: pointer;
   }
-
-  }
-
 }
